--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "dotenv>=0.9.9",
+    "langchain-core>=1.0.7",
+    "langchain-google-genai>=3.1.0",
+    "langgraph>=1.0.3",
+]
